# agentswarm

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  biome.json  dashboard.py  gource-adapter.py  main.py  package.json  plan.md  pnpm-lock.yaml  poke-server.ts  poke-tsconfig.json  pyproject.toml  run-gource.sh  tsconfig.base.json  turbo.json  workers-only.ndjson
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: blastgit-pr-demo.yml  ci.yml  deploy-landing.yml  release.yml
docs/: models.md  release-setup.md
examples/: README.md
examples/decagon-assistant/: README.md
generated-repos/minecraft-browser/: SPEC.md
gource/: README.md  gource-adapter.py  llm-detail-2026-02-15T04-48-33.ndjson  run-2026-02-15T04-48-33.ndjson  run-gource.sh  trace-2026-02-15T04-48-33.ndjson
gource/terminal-logs/: combined.ndjson
infra/: README.md  config.yaml  deploy_glm5.py  glm5_client.py  requirements.txt  sandbox_image.py  spawn_sandbox.py
landing/: .gitignore  index.html  package-lock.json  package.json
landing/public/: CNAME
landing/src/: main.ts  style.css
longshot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
marketing/imgs dev/: demo.gource
prompts/: root-planner.md
scripts/: README.md  create-runtime-bundle.sh  generate-homebrew-formula.py  setup-release.sh  test_sandbox.py
tests/: test_dashboard.py  test_main.py  test_spawn_sandbox.py
