[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longshot"
version = "0.1.0"
description = "Massively parallel autonomous coding agent orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.2",
]

[project.scripts]
longshot = "main:main"

[tool.setuptools]
py-modules = ["main", "dashboard"]
include-package-data = true


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806"]

[tool.ruff.format]
quote-style = "double"
